# DiceMaid

./: CMakeLists.txt  README.md  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: cmake.yml
Anys/: AnyProfile.cpp  AnyProfile.h  Anys.cpp  Anys.h  AnysDriver.cpp  AnysDriver.h  AnysLua.cpp  AnysLua.h
Dice/: Dice.aps  DicekiServant.cpp  DicekiServant.h
Diceki/: Dice.rc  DicekiEvent.cpp  DicekiServant.h
Frame/: DicekiEvent.cpp  FrameAPI.hpp  FrameChat.cpp  FrameChat.h
Helper/: CharConvert.hpp  HelperClock.hpp  HelperHttp.hpp  HelperSTL.hpp  WSClient.hpp  WSLinker.hpp  WSServer.hpp  fifo_map.hpp
OneBot/: AppInfo.h  OneBotAPI.cpp  OneBotAPI.h  OneBotEVE.cpp
